# tradesage

./: .gitignore  alembic.ini  check_env.py  package-lock.json  pyproject.toml  test_auth_oauth.html  validate_toml.py
.github/workflows/: ci.yml
architecture/: IMPLEMENTATION_CHECKLIST.md  README.md
architecture/analysis/: refresh_token_issues.md
architecture/diagrams/: system_architecture.md
architecture/docs/: system_overview.md
auth_service/: Dockerfile  pyproject.toml  requirements.txt
auth_service/app/: dependencies.py
auth_service/certs/: ecdsa-private.pem  ecdsa-public.pem
auth_service/database/: db_manager.py
auth_service/tests/: conftest.py
common/: audit_logger.py  auth.py  config.py  database.py  logger.py  logging_config.py  models.py  redis_client.py  utils.py
common/database/: db_manager.py
deployment/monitoring/: prometheus.yml
devops/docker/: Dockerfile
devops/monitoring/: prometheus.yml
devops/scripts/: startup-wrapper.js
frontend/: .npmrc  README.md  bun.lockb  index.html  package-lock.json  package.json  run.sh  tailwind.config.ts  vite.config.ts
frontend/public/: test.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
migrations/: env.py
migrations/versions/: af44c649a453_add_client_ip_and_user_agent_to_user_.py  (+1 more)
tenant-service/: .envZone.Identifier
tradesage-backend/: .env.example  .gitignore  Makefile  PLATFORM_INTEGRATION.md  docker-compose.yml  env.example  index.html  main.py  requirements.txt  run_tests.sh  script.js  start_auth_dev.sh  style.css  test_auth_oauth.js  validate_toml.py
(+190 files in other folders)
