### Updated `pyproject.toml` ###
# Ensure the pytest-asyncio setting and filterwarnings are in the [pytest] section.
# Move any existing [tool.pytest.ini_options] into [pytest] if necessary.

[project]
name = "tradesage-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis>=2.0.1",
    "alembic==1.12.1",
    "asyncpg==0.29.0",
    "email-validator>=2.2.0",
    "fastapi==0.104.1",
    "httpie>=3.2.4",
    "jinja2>=3.1.6",
    "kafka-python==2.0.2",
    "openai>=1.82.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg>=3.2.9",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pyjwt==2.8.0",
    "pytest-asyncio>=1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "sendgrid>=6.12.3",
    "toml>=0.10.2",
    "uvicorn[standard]==0.24.0",
]

# Remove the old [tool.pytest.ini_options] section if it exists.

[pytest]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore::pydantic.PydanticDeprecatedSince20:"
]
